# infinity-wasm-bridge

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/infinity-bridge-host/: Cargo.toml
crates/infinity-bridge-host/src/: client.rs  hub.rs  lib.rs  server.rs
crates/infinity-bridge-wasm/: Cargo.toml
crates/infinity-bridge-wasm/src/: bridge.rs  lib.rs
crates/infinity-bridge-wire/: Cargo.toml
crates/infinity-bridge-wire/src/: error.rs
crates/msfs-bridge-host/: Cargo.toml
crates/msfs-bridge-host/src/: client.rs  hub.rs  lib.rs  server.rs
crates/msfs-bridge-wasm/: Cargo.toml
crates/msfs-bridge-wasm/src/: backend.rs  bridge.rs  lib.rs
crates/msfs-bridge-wire/: Cargo.toml
crates/msfs-bridge-wire/src/: lib.rs  msg.rs
examples/: cohierent.ts  fake-gauge.rs  wasm_gauge_example.rs
examples/host-app/: Cargo.toml
examples/host-app/src/: fake_gauge.rs  main.rs
rescript/infinity-bridge-relay/: README.md  package.json  rescript.json
rescript/infinity-bridge-relay/src/: Dedup.res  Wire.res
rescript/infinity-instrument/: .gitignore  README.md  package.json  rescript.json
rescript/infinity-instrument/src/: Instrument.res  instrumentShell.mjs
rescript/msfs-bridge-relay/: package.json  rescript.json
rescript/msfs-bridge-relay/src/: BridgeRelay.res  MsfsBindings.res
rescript/msfs-instrument/: README.md  package.json  rescript.json
ts/infinity-bridge-relay/: package.json
ts/infinity-bridge-relay/src/: wire.ts
ts/msfs-bridge-relay/: package.json  tsconfig.json
ts/msfs-bridge-relay/src/: dedup.ts  index.ts  relay.ts
