[workspace]
resolver = "2"
members = [
    "crates/infinity-bridge-wire",
    "crates/infinity-bridge-wasm",
    "crates/infinity-bridge-host",
    "examples/host-app",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
authors = ["cameron_griego@protonmail.com"]
repository = "https://github.com/infinity-MSFS/infinity-wasm-bridge"
homepage = "https://github.com/infinity-MSFS/infinity-wasm-bridge"
keywords = ["msfs", "flightsim", "wasm", "commbus", "websocket"]
categories = ["game-development", "network-programming"]
readme = "README.md"
