[package]
name = "infinity-bridge-host"
description = "Host-side WebSocket server for infinity-bridge — async tokio, no framework dependency"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
infinity-bridge-wire = { path = "../infinity-bridge-wire", version = "0.1.1" }
axum = { version = "0.8", features = ["ws"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
uuid = { version = "1", features = ["v4"] }
