[package]
name = "infinity-bridge-wasm"
description = "WASM-side bridge for infinity-bridge — CommBus JSON RPC over the MSFS sandbox boundary"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
infinity-bridge-wire = { path = "../infinity-bridge-wire", version = "0.1.1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# These are provided by the consumer's MSFS WASM environment.
# The consumer's crate must supply the `msfs` dependency — we use
# only the comm_bus types which are re-exported through our traits.
