[package]
name = "msfs-bridge-wasm"
description = "WASM-side bridge for msfs-bridge — CommBus JSON RPC over the MSFS sandbox boundary"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
msfs-bridge-wire = { path = "../msfs-bridge-wire", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# These are provided by the consumer's MSFS WASM environment.
# The consumer's crate must supply the `msfs` dependency — we use
# only the comm_bus types which are re-exported through our traits.
