[package]
name = "msfs-bridge-wire"
description = "Wire protocol types for msfs-bridge — shared between WASM and host crates"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = ["serde_json/std"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
